--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -19,7 +19,9 @@ jobs:
         go-version: ^1.20
 
     - name: Build
-      run: make
+      run: |
+        go build
 
     - name: Test
-      run: make test
+      run: |
+        go test -v .
