--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -25,3 +25,7 @@ jobs:
     - name: Test
       run: |
         go test -v .
+        go tool cover -html=coverage.out
+
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2
